# UsbAccessoryDemo

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/me/oz/demo/usbsample/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  main.cpp  main.h
app/src/main/cpp/utils/: log.h
app/src/main/java/me/oz/demo/usbsample/: AccessoryCommunicator.java  Constants.java  MainActivity.java
app/src/main/java/me/oz/demo/usbsample/ui/main/: MainFragment.java  MainViewModel.java
app/src/main/java/me/oz/demo/usbsample/usb/: AccessoryNative.java
app/src/main/res/layout/: main_fragment.xml
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: accessory_filter.xml
app/src/test/java/me/oz/demo/usbsample/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
